@@ -151,6 +151,7 @@ wills_spaceship_repair-profit_target=Profit target
 wills_spaceship_repair-profit_label=Profit label
 wills_spaceship_repair-primary_player_name=Primary player name
 wills_spaceship_repair-item_delivery_pod_size_cash_values=Item delivery pod size cash values
+wills_spaceship_repair-investment_gui_condensing_minutes=Investment GUI condensing minutes
 
 
 
@@ -165,6 +166,7 @@ wills_spaceship_repair-profit_target=The amount of profit required to win the ga
 wills_spaceship_repair-profit_label=The label shown in the Status Gui for profit. A change is applied at the time.
 wills_spaceship_repair-primary_player_name=The ingame player name of the primary player. Used to target Item delivery Pods at if that mod is active.
 wills_spaceship_repair-item_delivery_pod_size_cash_values=A JSON table of the minimum coin cash value for each delivery pod size to be used in delivery of the instant cash. See readme for details.
+wills_spaceship_repair-investment_gui_condensing_minutes=How many minutes sequential investments will be condesned togeather per player in the investments GUI. Designed to reduce "clutter" of lots of small investments. 0 turns off the feature.
 
 
 
